FUNCALL can now inline the function argument when it is a macro that returns a lambda form as in (FUNCALL (FORMATTER ...) ...)

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -73,6 +73,9 @@ ECL 0.9k:
  - ECL tried to use intel-64bits assembler on 64 bits processors, even though
    compiler and the operating system work with 32bits.
 
+ - The compiler now inlines and optimizes (FUNCALL (X ..) ... ) where X is a
+   macro that returns a lambda form.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
