--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -84,6 +84,10 @@ ECL 0.9k:
  - The compiler now inlines and optimizes (FUNCALL (X ..) ... ) where X is a
    macro that returns a lambda form.
 
+ - ECL no longer needs library definition files ecl.def and ecl-threads.def
+   thanks to a more clever use of declarations __declspec(dllexport) and
+   __declspec(dllimport).
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
