--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -119,6 +119,9 @@ ECL 0.9k:
 	"/e/foo:bar"		DIR=(:ABSOLUTE "e"), NAME="foo:bar"
 	"/e/foo:bar/txt"	DIR=(:ABSOLUTE "e" "foo:bar"), NAME="txt"
 
+ - LOAD-TIME-VALUE would not work as expected when its argument was a variable
+   or a constant.
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
