--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -122,6 +122,11 @@ ECL 0.9k:
  - LOAD-TIME-VALUE would not work as expected when its argument was a variable
    or a constant.
 
+ - MACHINE-TYPE, MACHINE-INSTANCE, SOFTWARE-VERSION and similar functions are
+   now compliant and output NIL when they cannot guess the right information.
+   In particular MACHINE-INSTANCE returns the host name if the environment
+   variable HOSTNAME is set (in Unix) and COMPUTERNAME if set (in Windows).
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
