--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -131,6 +131,8 @@ ECL 0.9k:
  - LOG lost accuracy when applied to a complex number where the either the
    real or the imaginary part was much larger than the other one.
 
+ - Building without GMP is again supported.
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
