--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -136,6 +136,8 @@ ECL 0.9k:
 
  - Building without GMP is again supported.
 
+ - Bytecode functions can now be externalized in C compiled files.
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
