--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -73,6 +73,8 @@ ECL 0.9k:
  - Interpreted forms now remember the file in which they were defined
    and what form number they represent.
 
+ - LOAD now accepts namestrings which are of type (AND STRING (NOT BASE-STRING))
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
