--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -144,6 +144,8 @@ ECL 0.9k:
 
  - Support for large files in systems that implement fseeko().
 
+ - Added option TCP_NODELAY to the sockets package.
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
