--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -14,6 +14,10 @@ ECL 0.9l-p1:
 
  - In compiled files, externalize package objects using FIND-PACKAGE.
 
+ - In RUN-PROGRAM, there were two bugs: first, the keyword :WAIT was not defined
+   in the C core and caused an error when used; second, the input/output streams
+   were not properly arranged.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
