--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -6,23 +6,24 @@ ECL 0.9l-p1:
  - The compiler now signals compiler-error, compiler-warning and compiler-note
    for errors, warnings and notes, respectively.
 
- - WITH-COMPILATION-UNIT allows the user to set up handlers for different
-   compiler conditions, including errors, warnings and simple notes. The
-   recommended procedure is to use HANDLER-BIND and _NOT_ to transfer control
-   out of the handler, but to defer to the default ones.
+ - ECL allows the user to set up handlers for different compiler conditions,
+   including errors, warnings and simple notes. The recommended procedure is to
+   use HANDLER-BIND and _NOT_ to transfer control out of the compilation
+   environment, but to defer to the default handlers or use the restarts ABORT
+   and MUFFLE-WARNING.
+
 	(use-package :c)
-	(let ((warnings nil))
-	  (with-compilation-unit ()
-	    (handler-bind ((compiler-error #'(lambda (c)
-					       (push c warnings)
-					       (abort)))
-			   (compiler-message #'(lambda (c)
-						 (push c warnings)
-						 (muffle-warning))))
-	      (let ((*compile-verbose* nil))
-		(compile-file "foo.lsp"))))
+	(let ((messages nil))
+	  (handler-bind ((compiler-error #'(lambda (c)
+					     (push c messages)
+					     (abort c)))
+			 (compiler-message #'(lambda (c)
+					       (push c messages)
+					       (muffle-warning))))
+	    (let ((*compile-verbose* nil))
+	      (compile-file "foo.lsp")))
 	  (format t "~&;;; Printing compiler messages")
-	  (loop for m in (nreverse warnings)
+	  (loop for m in (nreverse messages)
 	     for i from 0
 	     do (format t "~&~@<;;; ~@;Message #~D~%~A~:>" i m)))
 
