--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -68,6 +68,9 @@ ECL 0.9l-p1:
 
  - The MSVC port can be built with support for unicode characters.
 
+ - PROCLAIM/DECLAIM now understand the abbreviated form of type declarations
+   user-defined and complex types.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
