--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -71,6 +71,9 @@ ECL 0.9l-p1:
  - PROCLAIM/DECLAIM now understand the abbreviated form of type declarations
    user-defined and complex types.
 
+ - The compiler did not understand the :UNSIGNED-SHORT/:SHORT FFI types
+   completely.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
