--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -71,6 +71,11 @@ ECL 0.9l-p1:
  - PROCLAIM/DECLAIM now understand the abbreviated form of type declarations
    user-defined and complex types.
 
+ - Sharp-dot macro reader (#.) gets its own sharp-equal context (#=) so that
+   the following form
+	(read-from-string "'#.(princ (list '#1=(1 2) '#1#))")
+   actually prints the right list (#1=(1 2) #1#).
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
