--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -76,6 +76,9 @@ ECL 0.9l-p1:
 	(read-from-string "'#.(princ (list '#1=(1 2) '#1#))")
    actually prints the right list (#1=(1 2) #1#).
 
+ - Inline/not-inline declarations for SETF-functions are not ignored (Josh
+   Elsasser).
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
