--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -74,6 +74,11 @@ ECL 0.9l-p1:
  - The compiler did not understand the :UNSIGNED-SHORT/:SHORT FFI types
    completely.
 
+ - Sharp-dot macro reader (#.) gets its own sharp-equal context (#=) so that
+   the following form
+	(read-from-string "'#.(princ (list '#1=(1 2) '#1#))")
+   actually prints the right list (#1=(1 2) #1#).
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
