--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -82,6 +82,8 @@ ECL 0.9l-p1:
  - Inline/not-inline declarations for SETF-functions are not ignored (Josh
    Elsasser).
 
+ - When a SETF place is a macro, it has to be expanded with MACROEXPAND-1.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
