--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -96,6 +96,9 @@ ECL 8.9.0:
  - In FTYPE proclamations and declarations, the type may now be a user defined
    function type (Josh Elsasser).
 
+ - COMPILE would create an extra empty file which would not get deleted after
+   finishing compilation (Josh Elsasser).
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
